--- a/src/styles/chatUI.css
+++ b/src/styles/chatUI.css
@@ -46,6 +46,12 @@ html, body {
     color: white;
     flex-shrink: 0;
   }
+  .bot-avatar img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
   
   .bot-info {
     flex: 1;
