--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -376,3 +376,19 @@ body {
   margin-top: auto;
   padding-top: 0.5rem;
 }
+
+.my-character-name {
+  max-width: 100px; /* or whatever width you want */
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  cursor: default; /* show default cursor */
+}
+
+
+.my-character-avatar-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-shrink: 0;
+}
